# pushswap

./: Main  README.md  meson.build
sorts/: cocktail.py  radix_lsb.py  randomizer
src/: meson.build
src/PushChroma/: Config.vala  Main.vala  PushChroma.vala
src/Pushswap/: Interpreter.vala  NumberScanner.vala  OperationScanner.vala  Parser.vala  Scanner.vala  Token.vala
src/Util/: Color.vala  DoublyCircularLinkedList.vala  Node.vala
src/Widgets/: Canvas.vala
