
src = [
    'PushChroma/Main.vala',
    'PushChroma/PushChroma.vala',
    'Pushswap/Interpreter.vala',
    'Pushswap/Parser.vala',
    'Pushswap/Token.vala',
    'Util/DoublyCircularLinkedList.vala',
    'Util/Node.vala',
    'Widgets/Canvas.vala'
]

executable(
    meson.project_name(),
    src,
    dependencies: deps
)
