
src = [
    'PushChroma/Main.vala',
    'PushChroma/PushChroma.vala',
    'Pushswap/Interpreter.vala',
    'Pushswap/NumberScanner.vala',
    'Pushswap/OperationScanner.vala',
    'Pushswap/Scanner.vala',
    'Pushswap/Token.vala',
    'Util/Color.vala',
    'Util/DoublyCircularLinkedList.vala',
    'Util/Node.vala',
    'Widgets/Canvas.vala'
]

executable(
    meson.project_name(),
    src,
    dependencies: deps
)
